<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_background_square"
        android:layout_margin="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="30sp"
            android:paddingTop="35sp"
            android:paddingEnd="35sp"
            android:paddingBottom="30sp"
            android:layout_marginTop="5sp"
            android:text="@string/text1"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ll_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_btn"
            android:layout_width="wrap_content"
            android:layout_height="43sp"
            android:layout_marginTop="10sp"
            android:layout_marginEnd="16sp"
            android:layout_marginBottom="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_information">

            <Button
                android:id="@+id/btn_close"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ripple_radius_btn_square_empty"
                android:text="@string/close"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_custom"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:background="@drawable/ripple_radius_btn_square"
                android:text="@string/enter"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

