<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_parent_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_appbar_wl"
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal"
            android:paddingTop="20sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_go_back"
                android:layout_width="30sp"
                android:layout_height="30sp"
                android:layout_marginTop="20sp"
                android:layout_marginStart="18sp"
                android:background="@drawable/ripple_circle_button"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_left_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_store_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inputProfile"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_margin="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_appbar_wl" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_set_img"
            android:layout_width="112sp"
            android:layout_height="112sp"
            android:layout_margin="25sp"
            android:background="@color/transparent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_my_profile_thin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_store_profile" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_store_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingTop="40dp"
            android:text="@string/inputNick"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_set_img"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/ll_edit_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginTop="28sp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_store_name">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nick"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp"
                android:maxLength="10"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textStyle="bold"
                android:inputType="text"
                android:layout_marginTop="5sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/nickname"
                android:textColor="@color/gray"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_enter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15sp"
            android:layout_marginEnd="15sp"
            android:layout_marginBottom="30sp"
            android:text="확인"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:background="@drawable/radius4_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>